try to fix bug on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -290,7 +290,7 @@ canvas {
 
 .saved-page-msg {
   max-width: 90vw;
-  font-size: 1.5em;
+  font-size: 1.2em;
   padding: 1em;
 
   background-color: cadetblue;
